(build): fix problem with jumping avatar width

--- a/src/styles/_header.less
+++ b/src/styles/_header.less
@@ -10,7 +10,7 @@ header {
 	}
 
 	img {
-		flex: 0 0 20px;
+		flex: 0 0 60px;
 		width: 60px;
 		height: 60px;
 		border-radius: 50%;
